--- a/renovate.json
+++ b/renovate.json
@@ -5,9 +5,12 @@
   "gradle-lite": {
     "enabled": true
   },
+  "gradle": {
+    "enabled": false
+  },
   "packageRules": [
     {
-      "packageNames": ["org.bstats:bstats-bukkit"],
+      "managers": ["gradle-lite"],
       "registryUrls": [
               "https://papermc.io/repo/repository/maven-public/",
               "https://repo.codemc.org/repository/maven-public",
